Made page prettier with image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div class="container articles">
+			<h1><img src="https://cloud.frontlinesms.com/assets/logo-stroked-e0acf4bd8c083108365fc8882893d6bd.png"></img> FrontlineCloud Help Docs</h1>
 			<div class="row search-container">
 				<div class="col-md-6">
 					<div class="input-group">
